novo estudo index2

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<htm>
+<html>
     <head>
         <title>
             Minha primeira Página!!!
@@ -13,4 +13,4 @@
         <h3>lv3</h3>
         <h4>lv4</h4>
     </body>
-</htm>
+</html>
