--- a/pagina01.html
+++ b/pagina01.html
@@ -5,7 +5,7 @@
         <meta.charset="utf-8"></meta.charset>       
     </head>
     <body>
-        <h1>Guerreiro no D&D 5.0</h1>
+        <h1>Guerreiro no D&D 5.0</h1> <!--STRONG e EM, essas tags são para formatação de texto para negrito e itálico-->
         <p><em>Guerreiros</em> aprendem o básico de todos os estilos de combate. Todo guerreiro sabe brandir um machado, esgrimir<br>
             com uma rapieira, empunhar uma <strong>espada longa ou uma espada grande</strong>, usar um arco ou mesmo prender inimigos<br>
             em uma rede com algum grau de perícia. Da mesma forma, um guerreiro sabe usar escudos e qualquer tipo de<br>
@@ -13,6 +13,6 @@
             <p>Alguns se concentram na arquearia, outros em lutar com duas armas ao mesmo tempo e ainda existem aqueles<br>
                 que aprimoram suas habilidades marciais com <em>magia</em>. Essas combinações de ampla capacidade generalista e uma<br>
                 vasta especialização tornam os guerreiros combatentes superiores nos campos de batalha e masmorras.
-            </p>
+            </p> <!--para parágrafos usam a tag P, e para quebra de linha no texto usam a tag BR(break)-->
     </body>
 </html>
