Estudo com imagens e hyperlinks, adicção de mais imagens

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         </title>
     </head>
     <body>
+        <a href="pagina02.html">Voltar a Pagina ANTERIOR!</a> <br>
         <! -- esta linha não faz nada, é um comentário -->
         Primeira linha<br/>
         Segunda linha
