--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <h2>Este é um título nível 2</h2>
         <h3>lv3</h3>
         <h4>lv4</h4>
+        Olá "<!--para escrever qualquer coisa, é só escrver, as vezes nao precisa de tags!-->"
     </body>
 </html>
