--- a/pagina02.html
+++ b/pagina02.html
@@ -7,7 +7,10 @@
     <body> <!--AQUI a tag <a> possui um atributo que definimos como NOME, posso pensar nos atributos como sendo variáveis na pagina!!!-->
         <a name="topo"></a> <!--PODEMOS CRIAR ANCORAS LOCAIS, PARA POR EXEMPLO VOLTAR A UMA PARTE ESPECÍFICA DA PRÓPRIA PAGINA!!!-->
         <h1>Guerreiro no D&D 5.0</h1>
-        <img src="imagem03.jpg"> <!--IMG é uma tag solteira(sem fechamento)-->
+        <img src="../HTML_Projects/imagem03.jpg" alt="Guerreiro"> <!--IMG é uma tag solteira(sem fechamento)-->
+        <img src="imagem03.jpg" alt="Guerreiro">
+        <!--usando ../ antes da imagem, indicamos para o caminho em um diretório acima do diretório da imagem-->
+        <!--o atributo alt= quer dizer um texto para a imagem caso ela não carregue na página por exemplo-->
         <!--src= source, fonte, nós devemos informar onde ele deve buscar, qual é a fonte deta imagem-->
         <!--img é uma tag para mostrar UMA imagem no documento-->
         <!--como a imagem estava na pasta do nosso HTML, só precisamos informar o nome da imagem-->
